@@ -1,6 +1,10 @@
 # Simple_Melody_Generator
 Two level random melody generator with scales. 
+Beware, the midi file generated will be in the same directory as the app.
 
-Still need to add other scales, maybe harmonic minors and all. 
-Better GUI but that with time. 
-Make it an app available for download, jMusic library to deal with. 
+Make it an app available for download, searching for javafx 10 or older for that. 
+
+jMusic library does not belong to me. Link in the app.
+
+To run the app :
+java --module-path /path/to/javafx/javafx-sdk-11.0.2 or another/lib  --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.web -jar /path/to/GUI_Music_Gen.jar 
